--- a/concept.html
+++ b/concept.html
@@ -28,11 +28,11 @@
       <div class="header-site-menu">
         <nav class="site-menu">
           <ul>
-            <li><a href="./concept.html">CONCEPT</a></li>
-            <li><a href="./menu.html">MENU</a></li>
-            <li><a href="./shop.html">SHOP</a></li>
-            <li><a href="./access.html">ACCESS</a></li>
-          </ul>
+          <li><a href="./concept.html">CONCEPT</a></li>
+          <li><a href="./menu.html">MENU</a></li>
+          <li><a href="./access.html">ACCESS</a></li>
+          <li><a href="#">LANGUAGE</a></li>
+        </ul>
         </nav>
       </div>
     </div>
